# tox-factor

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  setup.cfg  tox.ini
.circleci/: config.yml
src/tox_factor/: compat.py  factor.py  hooks.py  test.py
tests/: test_factor.py  test_hooks.py  test_integration.py  test_test.py
