[bdist_wheel]
universal = 1


[coverage:run]
branch = true
source = src

[coverage:report]
show_missing = true


[flake8]
max_line_length = 90
max_complexity = 10


[isort]
skip = .tox
atomic = true
line_length = 90
multi_line_output = 4
include_trailing_comma = true
known_standard_library = mock
known_third_party = tox,py
known_first_party = tox_factor


[metadata]
name = tox-factor
version = 0.1.1
description = Run tox testenvs that match a given factor
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE

author = Ryan P Kilby
author_email=kilbyr@gmail.com
; maintainer = Ryan P Kilby, Oliver Bestwalter
; maintainer-email = tox-dev@python.org
url = https://github.com/rpkilby/tox-factor
project_urls =
    Source=https://github.com/rpkilby/tox-factor
    Tracker=https://github.com/rpkilby/tox-factor/issues

classifiers =
    Development Status :: 3 - Alpha
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing

[options]
install_requires =
    tox
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
tox =
    factor = tox_factor.hooks
